k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: test
  labels:
    app: my-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: my-app
